update CASI webpage

--- a/creative-audio-synthesis-and-interfaces-workshop/index.html
+++ b/creative-audio-synthesis-and-interfaces-workshop/index.html
@@ -48,9 +48,8 @@
 									<i>13:40</i> – Session 2<br>
 									<i>15:40</i> – Close Workshop</p>
 									<h4>@ Performance Lab</h4>
-									<p><i>16:00</i> – Sound Check<br>
-									< 17:30 Dinner Break ><br>
-									<i>19:30</i> – Evening Concert</p>
+									<p><i>16:00</i> – Concert Setup<br>
+									<i>17:00</i> – Concert Begins</p>
 									<h3 id="P5">Invited Talks and Performances</h3>
 									<ul class="feature-icons">
 										<li class="icon solid fa-microphone"><h5>TALKS</h5><br>
@@ -74,12 +73,14 @@
 										Abstract: Psychoacoustical so-called “timbre spaces” map perceptual similarity ratings of instrument sounds onto low-dimensional embeddings via multidimensional scaling but suffer from scalability issues and are incapable of generalization. Recent results from audio (music and speech) quality assessment as well as image similarity have shown that deep learning provides emergent embeddings that align well with human perception while being largely free from these constraints. In this talk, we present metrics to evaluate the alignment between three representations—extracted from a simple sound matching model—and the existing "timbre space" data containing 2,614 pairwise ratings on 334 audio samples. Among the tested representations, we highlight the effectiveness of the "style" embeddings, which are inspired by the style transfer task in computer vision. We compare our results to commonly used representations, including MFCCs and CLAP embeddings. Furthermore, based on the performance of the style embedding derived from the CLAP model, we demonstrate its broader effectiveness in modeling human timbre perception.<br><br>
 										<em><span class="date-font">Title: GuitarFlow: Realistic Electric Guitar Synthesis From Tablatures via Flow Matching and Style Transfer</span></em><br>
 										<em><span class="date-font">Author: Jackson Loth -- Queen Mary University of London</span></em><br>
-										Abstract: Music generation in the audio domain using artificial intelligence (AI) has witnessed steady progress in recent years. However for some instruments, particularly the guitar, controllable instrument synthesis remains limited in expressivity. We introduce GuitarFlow, a model with a high degree of controllability designed specifically for electric guitar synthesis. The generative process is guided using tablatures, an ubiquitous and intuitive guitar-specific symbolic format. The tablature format easily represents guitar-specific playing techniques (e.g. bends, muted strings and legatos), which are more difficult to represent in other common music notation formats such as MIDI. Our model relies on an intermediary step of first rendering the tablature to audio using a simple sample-based virtual instrument, then performing style transfer using Flow Matching in order to transform the virtual instrument audio into more realistic sounding examples. This results in a model that is quick to train and to perform inference, requiring less than 6 hours of training data. We present the results of objective evaluation metrics, together with a listening test, in which we show significant improvement in the realism of the generated guitar audio from tablatures.<br>
+										Abstract: Music generation in the audio domain using artificial intelligence (AI) has witnessed steady progress in recent years. However for some instruments, particularly the guitar, controllable instrument synthesis remains limited in expressivity. We introduce GuitarFlow, a model with a high degree of controllability designed specifically for electric guitar synthesis. The generative process is guided using tablatures, an ubiquitous and intuitive guitar-specific symbolic format. The tablature format easily represents guitar-specific playing techniques (e.g. bends, muted strings and legatos), which are more difficult to represent in other common music notation formats such as MIDI. Our model relies on an intermediary step of first rendering the tablature to audio using a simple sample-based virtual instrument, then performing style transfer using Flow Matching in order to transform the virtual instrument audio into more realistic sounding examples. This results in a model that is quick to train and to perform inference, requiring less than 6 hours of training data. We present the results of objective evaluation metrics, together with a listening test, in which we show significant improvement in the realism of the generated guitar audio from tablatures.<br><br>
+										More talks to be announced!
 										</li>
 										<li class="icon solid fa-music"><h5>PERFORMANCES</h5>
 										<em><span class="date-font">Title: Experience Replay</span></em><br>
 										<em><span class="date-font">Author: Vicenzo Madaghiele -- University of Oslo</span></em><br>
-										Abstract: Experience Replay is an improvised performance in which autonomous sound-generating processes from various sources are combined into a network of feedback relations focusing on dynamic and textural evolution. The performance employs electric guitar, sound granulation and chaotic synthesis to explore states of fragile equilibrium and apparent disorder.</li>
+										Abstract: Experience Replay is an improvised performance in which autonomous sound-generating processes from various sources are combined into a network of feedback relations focusing on dynamic and textural evolution. The performance employs electric guitar, sound granulation and chaotic synthesis to explore states of fragile equilibrium and apparent disorder.<br><br>
+										More performances to be announced!</li>
 									</ul>
 									<p><center><h4>ORGANISERS</h4><p>
 									<p></p>
