update CASI webpage

--- a/creative-audio-synthesis-and-interfaces-workshop/index.html
+++ b/creative-audio-synthesis-and-interfaces-workshop/index.html
@@ -90,7 +90,7 @@
 										<em><span class="date-font">Title: Weaving</span></em><br>
 										<em><span class="date-font">Author: Balint Laczko -- University of Oslo</span></em><br>
 										Abstract: Weaving explores how an evolving set of musical phrases create the impression of chamber music, or an imaginary landscape with its own weather. During the performance my instrument records every phrase I make, and gradually takes over, "continuing" the threads I started, first just to free my hands, then to play together with me, and finally, to create a musical landscape of its own, keeping me as the gardener.<br><br>
-										More performances to be announced!</li>
+										Additionally, Björn Thor Jónsson (University of Oslo) will present a demo showcasing his software in a musical context.</li>
 									</ul>
 									<p><center><h4>ORGANISERS</h4><p>
 									<p></p>
