--- a/timbricks-temp/index.html
+++ b/timbricks-temp/index.html
@@ -7,31 +7,18 @@
   <style>
     body {
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
       background-color: #f4f4f4;
       color: #333;
       font-family: Arial, sans-serif;
-      margin: 0;
-    }
-
-    img {
-      width: 150px;
-      height: auto;
-      margin-bottom: 20px;
-    }
-
-    h1 {
       font-size: 2em;
-      font-weight: 500;
+      margin: 0;
     }
   </style>
 </head>
 <body>
-  <!-- Replace the src below with your own logo file or URL -->
-  <img src="logo.png" alt="Logo">
-  <h1>Coming Soon</h1>
+  Coming Soon
 </body>
 </html>
